fixed alll my code spacing and fixed and error

--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,7 @@ body, html {
 }
 
 * {
-  * box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .wallpaper-img {
